<resources>
    <string name="app_name">InClass_Sankara_Narayanan_002787959</string>
    <string name="Assignment1">Assignment1</string>
    <string name="InClass01_btn">InClass01</string>
    <string name="BMI_label">Body Mass Index (BMI)</string>
    <string name="weight_text">Weight</string>
    <string name="lb_text">lb</string>
    <string name="height_text">Height</string>
    <string name="hint_weight">weight in pounds</string>
    <string name="feet_hint">feet</string>
    <string name="inches_hint">inches</string>
    <string name="feet_text">feet</string>
    <string name="Inches_text">inches</string>
    <string name="click_calculate">"Click On Calculate BMI to find your BMI "</string>
    <string name="email_hint">EmailId:</string>
    <string name="nameclass02hint">Name</string>
    <string name="RadioButtonText">I use</string>
    <string name="currentMood">Your current mood:</string>
    <string name="androidText">Android</string>
    <string name="iosText">Ios</string>
    <string name="selectAvatar">Select your Avatar</string>
    <string name="name_holder">Name:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint_frag">Email</string>
    <string name="inClass03">InClass03</string>
    <string name="submit">Submit</string>
    <string name="I_use_text">I use</string>
    <string name="InClass04">InClass04</string>
    <string name="slect_complex">Select Complexcity:</string>
    <string name="generate_number_text">Generate Number</string>
    <string name="min_text">Minimum:</string>
    <string name="max_text">Maximum:</string>
    <string name="Average_text">Average:</string>
    <string name="InClass05">InClass05</string>
    <string name="go_btn_text">GO</string>
    <string name="InClass06_text">InClass06</string>
    <string name="Country_text">Country</string>
    <string name="Category_text">Category</string>
    <string name="InClass08">InClass08</string>
    <string name="logOut">LogOut</string>
    <string name="send_value">send</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="flip_camera">Switch Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="take_photo">Take Photo</string>
</resources>