<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InClass01">

    <TextView
        android:id="@+id/BMI_textid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/BMI_label"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/weight_text"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/BMI_textid"
        app:layout_constraintTop_toBottomOf="@+id/BMI_textid" />

    <EditText
        android:id="@+id/weight_lb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_weight"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/weight_text"
        app:layout_constraintTop_toBottomOf="@+id/weight_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lb_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/weight_lb"
        app:layout_constraintStart_toEndOf="@+id/weight_lb"
        app:layout_constraintTop_toTopOf="@+id/weight_lb" />

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/height_text"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/weight_lb"
        app:layout_constraintTop_toBottomOf="@+id/weight_lb" />

    <EditText
        android:id="@+id/height_feet_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/feet_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/height_text"
        app:layout_constraintTop_toBottomOf="@+id/height_text" />

    <EditText
        android:id="@+id/height_inches_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/inches_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/height_feet_id"
        app:layout_constraintTop_toBottomOf="@+id/height_feet_id" />

    <Button
        android:id="@+id/bmi_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#E1DEDE"
        android:text="Calculate BMI"
        android:textColor="#252424"
        app:layout_constraintEnd_toEndOf="@+id/inches_id"
        app:layout_constraintStart_toStartOf="@+id/height_inches_id"
        app:layout_constraintTop_toBottomOf="@+id/height_inches_id" />

    <TextView
        android:id="@+id/inches_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Inches_text"
        app:layout_constraintBottom_toBottomOf="@+id/height_inches_id"
        app:layout_constraintStart_toEndOf="@+id/height_inches_id"
        app:layout_constraintTop_toTopOf="@+id/height_inches_id" />

    <TextView
        android:id="@+id/result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/click_calculate"
        android:textColor="#0E0E0E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bmi_calculation"
        app:layout_constraintStart_toStartOf="@+id/bmi_calculation"
        app:layout_constraintTop_toBottomOf="@+id/bmi_calculation" />

    <TextView
        android:id="@+id/feet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/feet_text"
        app:layout_constraintBottom_toBottomOf="@+id/height_feet_id"
        app:layout_constraintStart_toEndOf="@+id/height_feet_id"
        app:layout_constraintTop_toTopOf="@+id/height_feet_id"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/resul_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#0B0A0A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/result_id"
        app:layout_constraintStart_toStartOf="@+id/result_id"
        app:layout_constraintTop_toBottomOf="@+id/result_id" />

</androidx.constraintlayout.widget.ConstraintLayout>