<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submitClass02Id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass02.InClass02">

    <EditText
        android:id="@+id/name02Id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nameclass02hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email02Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/name02Id"
        app:layout_constraintStart_toStartOf="@+id/name02Id"
        app:layout_constraintTop_toBottomOf="@+id/name02Id" />

    <ImageButton
        android:id="@+id/imageButtonid"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/select_avatar"
        app:layout_constraintEnd_toEndOf="@+id/email02Text"
        app:layout_constraintStart_toStartOf="@+id/email02Text"
        app:layout_constraintTop_toBottomOf="@+id/email02Text"
        tools:srcCompat="@tools:sample/avatars" />

    <RadioGroup
        android:id="@+id/radioGrpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonid">

        <RadioButton
            android:id="@+id/radioButtonId1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/androidText" />

        <RadioButton
            android:id="@+id/radioIdbutton02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iosText" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/RadioButtonText"
        app:layout_constraintStart_toStartOf="@+id/radioGrpId"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonid" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/statusImageId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpId" />

    <TextView
        android:id="@+id/moodTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/currentMood"
        app:layout_constraintEnd_toEndOf="@+id/radioGrpId"
        app:layout_constraintStart_toStartOf="@+id/radioGrpId"
        app:layout_constraintTop_toBottomOf="@+id/radioGrpId" />

    <TextView
        android:id="@+id/moodStatusId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/moodTextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/moodTextId" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/statusImageId"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:srcCompat="@drawable/happy"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>